# AIE-F

./: .gitignore  README.md
assignment-submission/: README.md
assignment-submission/class-1/group-2/: .gitignore  README.md  group2-hybrid-eliza.py  main.py  pyproject.toml  requirements.txt
assignment-submission/class-1/group-2/eliza/: burmese_chat_ui.md  burmese_chat_ui.py  commands.txt  hybrid-eliza-improve-ver1.py  hybrid-eliza-mm-logic-flow.md  hybrid-eliza-mm-lstm-steps.md  hybrid-eliza-mm-lstm.py  performance.txt  performance_thiri.txt
assignment-submission/class-1/group-2/eliza_experiments/: commands.txt  hybrid-eliza-mm-bilstm-attention-guide.md  hybrid-eliza-mm-bilstm-attention.py  hybrid-eliza-mm-linear-svc-guide.md  hybrid-eliza-mm-linear-svc.py
assignment-submission/class-1/group-2/eliza_experiments/log/: performance_log_theingi.txt  performance_log_thiri.txt
assignment-submission/class-1/group-2/notebooks/: Data Preprocessing.ipynb  Model Training Demo.ipynb
assignment-submission/class-1/group-2/scripts/: chat.py  custom_ui_chatter.py  eval.py  streamlit.py  streamlit_app.py  streamlit_chatter.py  train.py
assignment-submission/class-1/group-2/src/: eliza.py  eliza_rules.py  model.py  prep_data.py  preprocessing.py  rabbit.py  vocab_builder.py
assignment-submission/class-10/: README.md
slide-code/class-05/: README.md
slide-code/class-06/: README.md
slide-code/class-07/: README.md
slide-code/class-09/: README.md
slide-code/class-10/: README.md
slide-code/class-11/: README.md
slide-code/class-12/: README.md
(+13321 files in other folders)
