[project]
name = "group-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair<5",
    "matplotlib>=3.10.8",
    "mmdt-tokenizer>=0.1.3",
    "myanmartools>=1.2.1",
    "pandas[excel]<3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.24.0",
    "torch>=2.10.0",
]

